# ultr-reproducibility

./: .gitignore  1_plot_metrics.py  2_plot_bias.py  2_plot_position_bias.py  3_plot_hyperparameters.py  4_plot_best_hyperparameters.py  4_plot_best_metrics.py  5_download_runs.py  LICENSE  README.md  app.py  baselines.sh  basic_stats.py  density_estimation.py  environment.yaml  join_hyperparameters.py  logging_policy.py  main.py  propensity_estimation.py  pyproject.toml  test_every_epoch.py
app/: position_bias.py
app/components/: sidebar.py
app/utils/: const.py  file.py  model.py
config/: config.yaml  kde.yaml  user_const.yaml
config/data/: baidu-mlm-ctr.yaml  baidu.yaml  ltr.yaml  tencent-mlm-ctr.yaml  tencent.yaml  uva-mlm-ctr.yaml  uva-retro-mae.yaml  uva.yaml
config/hyperparameter/: baidu_dla.yaml  baidu_naive-lambda-rank.yaml  baidu_regression-em.yaml  ltr_dla.yaml  ltr_naive-listwise.yaml  ltr_pbm-pointwise.yaml  ltr_regression-em.yaml  naive_pointwise.yaml  pbm_pointwise.yaml  two-towers_pointwise.yaml  uva_ips-pointwise.yaml  uva_naive-lambda-rank.yaml  uva_pbm-listwise.yaml  uva_regression-em.yaml
config/launcher/: ilps.yaml  snellius.yaml
config/loss/: listwise-dla.yaml  listwise-em.yaml  listwise-ipw.yaml  listwise-topobs.yaml  listwise.yaml  pairwise-bc.yaml  pairwise-debiasing.yaml  pairwise-ipw.yaml  pairwise-topobs.yaml  pairwise.yaml  pointwise-bc.yaml  pointwise-dla.yaml  pointwise-em.yaml  pointwise-ipw.yaml  pointwise-topobs.yaml  pointwise.yaml
config/model/: base.yaml  behavior-cloning.yaml  bm25.yaml  dla-norm-off.yaml  dla.yaml  ips-listwise.yaml  ips-pointwise-rax.yaml  ips-pointwise.yaml  naive-lambda-rank.yaml  naive-listwise.yaml  naive-pointwise.yaml  naive.yaml  pair-pbm.yaml  pairwise-debias.yaml  pbm-listwise.yaml  pbm-pointwise.yaml  pbm.yaml  random.yaml  regression-em.yaml  two-towers.yaml
config/tune/: base.yaml  naive.yaml  pbm.yaml  two-towers.yaml
config/tune/cluster/: ilps.yaml
notebooks/: baidu-figure.ipynb  position-bias.ipynb  results.ipynb  testing.ipynb  theme.py
pages/: 1_plot_metrics.py  position_bias.py
pages/utils/: file.py
propensities/: adjacent_chain.csv  adjacent_chain.npy  adjacent_chain_nofake.npy  ctr.csv  ctr.npy  ctr_nofake.npy  global_all_pairs.csv  global_all_pairs.npy  global_all_pairs_nofake.npy  pivot_one.csv  pivot_one.npy  pivot_one_nofake.npy
scripts/: 1_tune-dims.txt  1_tune-layers.txt  2_tune-dims.txt  2_tune-layers.txt  3_tune-bert.txt  3_tune-ltr.txt  tune-baidu-bert-dla.sh  tune-baidu-bert-ips.sh  tune-baidu-bert-naive.sh  tune-baidu-bert-pairwise.sh  tune-baidu-bert-pbm.sh  tune-baidu-ltr-dla.sh  tune-baidu-ltr-ips.sh  tune-baidu-ltr-naive.sh  tune-baidu-ltr-pairwise.sh  tune-baidu-ltr-pbm.sh  tune-baidu-naive.sh  tune-layers.txt  tune.sh  tune_naive.sh  tune_pbm.sh  tune_two-towers.sh
src/: data.py  distribution.py  log.py  loss.py  metrics.py  trainer.py  util.py
src/models/: __init__.py  base.py  behavior_cloning.py  bm25.py  dla.py  ips.py  naive.py  pair_pbm.py  pairwise_debias.py  pbm.py  random.py  regression_em.py  transformers.py  two_tower.py
tests/: test_data.py
