[tool.poetry]
name = "baidu-reproducibility"
version = "0.6.1"
description = ""
authors = ["Philipp Hager <p.k.hager@uva.nl>", "Romain Deffayet <r.e.deffayet@uva.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
# Core
python = ">=3.9,<3.9.7 || >3.9.7,<3.13" # Streamlit requires !=3.9.7
jaxlib = {version = "0.4.23+cuda11.cudnn86", source = "jax_cuda"}
jax = {version = "0.4.23", extras=["cuda11_pip"]}
flax = "^0.7.5"
hydra-core = "^1.3.2"
# Data
torch = {version = "^2.1.1", source = "torch_cpu"}
datasets = "^2.14.6"
pyarrow = "^14.0.1"
mmh3 = "^4.0.1"
# Scientific computing
scikit-learn = "^1.3.2"
rax = "^0.3.0"
kdepy = "^1.1.8"
ultr-bias-toolkit = "^0.0.5"
# Visualization
jupyterlab = "^4.0.8"
altair = "^5.1.0"
streamlit = "^1.28.1"
wandb = "^0.16.1"
# Hyperparameters
hydra-submitit-launcher = "^1.2.0"
hydra-optuna-sweeper = "1.3.0.dev0"
# Misc
typing-extensions = "^4.8.0"
rich = "^13.6.0"
typer = " ^0.9.0"


[[tool.poetry.source]]
name = "jax_cuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "explicit"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
